--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.11.1",
+    "react-scroll": "^1.8.9",
     "react-simple-typewriter": "^5.0.1",
+    "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
     "tailwind-scrollbar": "^3.0.0"
   },
